--- a/package.json
+++ b/package.json
@@ -35,5 +35,25 @@
         "@commitlint/config-conventional": "^17.3.0",
         "prettier": "^2.8.1",
         "pretty-quick": "^3.1.3"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js"
+        ],
+        "rootDir": ".",
+        "testRegex": ".*\\.test\\.js$",
+        "collectCoverageFrom": [
+            "./follow-you.js"
+        ],
+        "coverageDirectory": "../coverage",
+        "testEnvironment": "node",
+        "coverageThreshold": {
+            "global": {
+                "branches": 100,
+                "functions": 100,
+                "lines": 100,
+                "statements": 100
+            }
+        }
     }
 }
