--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "@dyrloz/follow-you-client",
     "version": "2.1.2",
     "description": "Follow you is a npm package that will allow to generate a random id in a specific format and verify that an id have this format.",
-    "main": "follow-you.js",
+    "main": "src/follow-you.js",
     "scripts": {
         "test": "jest",
         "test:cov": "jest --coverage",
-        "lint": "eslint \"follow-you.js\"",
+        "lint": "eslint \"src/follow-you.js\"",
         "precommit": "pretty-quick --staged && npm run lint && npm run test",
         "prepare": "husky install",
         "release": "npm run test:cov && standard-version",
@@ -43,7 +43,7 @@
         "rootDir": ".",
         "testRegex": ".*\\.test\\.js$",
         "collectCoverageFrom": [
-            "./follow-you.js"
+            "./src/follow-you.js"
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node",
